--- a/historyList_static.html
+++ b/historyList_static.html
@@ -12,97 +12,86 @@
 <div class="ui-page ui-header-fixed ui-footer-fixed">
     <div class="ui-header">
         <a href="./index.html" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
-        <h1 class="ui-title">未上传的检查列表</h1>
+        <h1 class="ui-title">统计检查列表</h1>
         <!--<a href="#" type="button" data-role="changePage" class="ui-btn-simple ui-header-btn-right">编辑</a>-->
     </div>
     <div class="ui-content page-index">
         <ul class="ui-form-list layout-inset li-block jc-list-part">
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_static.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text clearfix">
                             <h4 class="ui_media_title clearfix">
                                 <span class="type-name pull-left">船舶自查</span>
                                 <span class="check-time pull-left">2016-06-06</span>
-                                <!--<span class="item-state pull-right">已上传</span>-->
                             </h4>
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
-                                <!--<span class="pory-static">缺陷数：<em class="text-warning">5%</em></span>-->
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_static.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
                                 <span class="type-name pull-left">PSC检查</span>
                                 <span class="check-time pull-left">2016-06-06</span>
-                                <!--<button type="button" class="pull-right item-state btn_primary">上传</button>-->
                             </h4>
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_static.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
                                 <span class="type-name pull-left">PSC检查</span>
                                 <span class="check-time pull-left">2016-06-06</span>
-                                <!--<button type="button" class="pull-right item-state btn_primary">上传</button>-->
                             </h4>
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_static.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
                                 <span class="type-name pull-left">PSC检查</span>
                                 <span class="check-time pull-left">2016-06-06</span>
-                                <!--<button type="button" class="pull-right item-state btn_primary">上传</button>-->
                             </h4>
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_static.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
                                 <span class="type-name pull-left">PSC检查</span>
                                 <span class="check-time pull-left">2016-06-06</span>
-                                <!--<button type="button" class="pull-right item-state btn_primary">上传</button>-->
                             </h4>
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
                             </p>
                         </div>
                     </div>
