--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                     未上传检查
                 </p>
             </a>
-            <a href="#" class="ui_grid">
+            <a href="historyList_defect.html" class="ui_grid">
                 <div class="ui_grid_icon">
                     <i class="icon">
                         <img src="image/ico_gztj.png">
                     </i>
                 </div>
                 <p class="ui_grid_label">
-                    缺陷项
+                    未上传检查的缺陷项
                 </p>
             </a>
-            <a href="#" class="ui_grid">
+            <a href="historyList_static.html" class="ui_grid">
                 <div class="ui_grid_icon">
                     <i class="icon">
                         <img src="image/ico_zdzf.png">
@@ -95,7 +95,7 @@
                     统计
                 </p>
             </a>
-            <a href="#" class="ui_grid">
+            <a href="study_zj_list.html" class="ui_grid">
                 <div class="ui_grid_icon">
                     <i class="icon">
                         <img src="image/ico_zdzf.png">
@@ -105,7 +105,7 @@
                     按章节学习
                 </p>
             </a>
-            <a href="#" class="ui_grid">
+            <a href="study_zw_list.html" class="ui_grid">
                 <div class="ui_grid_icon">
                     <i class="icon">
                         <img src="image/ico_zdzf.png">
