--- a/viewDetail.html
+++ b/viewDetail.html
@@ -13,7 +13,7 @@
 <body class="ui-body">
 <div class="ui-page ui-header-fixed ui-footer-fixed">
     <div class="ui-header">
-        <a href="#" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
+        <a href="historyList.html" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
         <h1 class="ui-title">历史检查项详细</h1>
         <!--<a href="#" type="button" data-role="changePage" class="ui-btn-simple ui-header-btn-right">编辑</a>-->
     </div>
@@ -46,7 +46,7 @@
                             </h4>
                             <p class="ui_media_desc">
                                 <span>检查结果：不是(N)</span>
-                                <span>原因：这里填写原因</span>
+                                <span class="text-danger">原因：这里填写原因</span>
                             </p>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             </h4>
                             <p class="ui_media_desc">
                                 <span>检查结果：不是(N)</span>
-                                <span>原因：这里填写原因</span>
+                                <span class="text-danger">原因：这里填写原因</span>
                             </p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             </h4>
                             <p class="ui_media_desc">
                                 <span>检查结果：不是(N)</span>
-                                <span>原因：这里填写原因</span>
+                                <span class="text-danger">原因：这里填写原因</span>
                             </p>
                         </div>
                     </div>
