--- a/historyList_defect.html
+++ b/historyList_defect.html
@@ -12,13 +12,13 @@
 <div class="ui-page ui-header-fixed ui-footer-fixed">
     <div class="ui-header">
         <a href="./index.html" data-role="goBackPage" class="ui-btn-simple ui-btn-back ui-header-btn-left">返回</a><!--无边框的按钮ui-btn-simple；链接ui-btn-link;-->
-        <h1 class="ui-title">未上传的检查列表</h1>
+        <h1 class="ui-title">存在缺陷的检查列表</h1>
         <!--<a href="#" type="button" data-role="changePage" class="ui-btn-simple ui-header-btn-right">编辑</a>-->
     </div>
     <div class="ui-content page-index">
         <ul class="ui-form-list layout-inset li-block jc-list-part">
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_defect.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text clearfix">
                             <h4 class="ui_media_title clearfix">
@@ -29,15 +29,18 @@
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
-                                <!--<span class="pory-static">缺陷数：<em class="text-warning">5%</em></span>-->
+                                <span class="pory-static">
+                                    <label>缺陷分布：</label>
+                                    <span>第一章：<em class="text-warning">5个</em></span>
+                                    <span>第二章：<em class="text-warning">3个</em></span>
+                                </span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_defect.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
@@ -48,14 +51,18 @@
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
+                                <span class="pory-static">
+                                    <label>缺陷分布：</label>
+                                    <span>第一章：<em class="text-warning">5个</em></span>
+                                    <span>第二章：<em class="text-warning">3个</em></span>
+                                </span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_defect.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
@@ -66,14 +73,18 @@
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
+                                <span class="pory-static">
+                                    <label>缺陷分布：</label>
+                                    <span>第一章：<em class="text-warning">5个</em></span>
+                                    <span>第二章：<em class="text-warning">3个</em></span>
+                                </span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_defect.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
@@ -84,14 +95,18 @@
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
+                                <span class="pory-static">
+                                    <label>缺陷分布：</label>
+                                    <span>第一章：<em class="text-warning">5个</em></span>
+                                    <span>第二章：<em class="text-warning">3个</em></span>
+                                </span>
                             </p>
                         </div>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="item-link" href="viewDetail.html">
+                <a class="item-link" href="viewDetail_defect.html">
                     <div class="ui_panel_bd">
                         <div class="ui_media_box ui_media_text">
                             <h4 class="ui_media_title clearfix">
@@ -102,7 +117,11 @@
                             <p class="ui_media_desc">
                                 <span class="country-name">国家：波斯尼亚和黑塞哥维那</span>
                                 <span class="pory-name">港口：克珀斯-克里斯堤港</span>
-                                <span class="pory-static">完成：<em class="text-success">100%</em>   缺陷数：<em class="text-warning">5%</em></span>
+                                <span class="pory-static">
+                                    <label>缺陷分布：</label>
+                                    <span>第一章：<em class="text-warning">5个</em></span>
+                                    <span>第二章：<em class="text-warning">3个</em></span>
+                                </span>
                             </p>
                         </div>
                     </div>
